--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
   }
   function getImage() {
     let word = theme;
-    let url = "http://image.baidu.com/search/index?tn=baiduimage&word=" + word;
+    let url = "http://soso.nipic.com/Home/getRecommend?page=1&q=" + word + "&isVip=false";
     jQuery.noConflict();
     jQuery.ajax({
       type: "get",
