--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     }
     paragraph = addP(paragraph);
     essay.push(paragraph);
-
+    getImage();
     let typesetting = '<div>' + essay.join('</div><div>') + '</div>';
     $('#essay').innerHTML = typesetting;
   }
@@ -297,6 +297,23 @@
   if (getUrlP('theme')) {
     getEssay();
     gtag('event', 'shared', { 'event_label': theme, 'seed': anyseed, 'title_seed': theme + '_' + anyseed });
+  }
+  function getImage() {
+    let word = theme;
+    let url = "http://soso.huitu.com/Search/GetAllPicInfoNew?perPageSize=100&kw=%E6%84%9F%E6%81%A9%E8%8A%82&ds=0&page=1"
+    jQuery.noConflict();
+    jQuery.ajax({
+      type: "get",
+      url: url,
+      contentType: 'application/x-www-form-urlencoded;charset=utf-8',  
+      dataType: "json",
+      success: function (data) {
+        console.log(data);
+      },
+      error: function (e) {
+        console.log(e);
+      }
+    });
   }
 </script>
 <style>
