--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
   }
   function getImage() {
     let word = theme;
-    let url = "http://soso.huitu.com/Search/GetAllPicInfoNew?perPageSize=100&kw=%E6%84%9F%E6%81%A9%E8%8A%82&ds=0&page=1"
+    let url = "https://soso.huitu.com/Search/GetAllPicInfoNew?perPageSize=100&kw=%E6%84%9F%E6%81%A9%E8%8A%82&ds=0&page=1"
     jQuery.noConflict();
     jQuery.ajax({
       type: "get",
