--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
 <script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
 <script>
-
+  window.$ = function (selector) {
+    return document.querySelector(selector);
+  }
   // 获取网址参数
   function getUrlP(value) {
     return new URL(window.location.href).searchParams.get(value)
